gateway/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lab
  namespace: istio-ingress
spec:
  hosts:
  - "lab.example.com"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    route:
    - destination:
        port:
          number: 80
        host: argocd-server.argocd
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system
